<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MapActivity" >
    <item android:id="@+id/action_settings"

        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/setting_updatefrequency"
        android:title="@string/action_settings_location_update_frequency"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/setting_vehicle"
        android:title="@string/action_settings_vehicle"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/setting_mode"
        android:title="@string/action_settings_mode"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
